style.css
* {
    font-family: Arial, Helvetica, sans-serif;
}

body {
    background-color: 	rgb(88, 101, 242);
}

h1 {
    background-color:	#84ade7;
    padding: 20px;
    border-radius: 10px;
}


.main-display {
    display: flex;
    justify-content: space-between;
}

.sortable-container {
    display: flex;
    flex-direction: column;
    width: 110%;
    background-color: #84ade7;
    margin-top: 10px;
    border: solid 2px black;
    border-radius: 10px;
}

.checkbox-todo {
    transform: scale(1.15);
}

.todos {
    display: flex;
    flex-direction: column;
    width: 90%;
}

.toDoItem {
    display: flex;
    justify-content: space-between;
    align-items: center; 

    color: black;
    list-style: none;
    margin-left:-40px;
    padding: 10px;
    border: 2px solid black;
    margin-bottom: 20px;
    background-color: beige;
    border-radius: 10px;
}

.category-container {
    
    width: 45%;
}

.completedToDoList {
    display:flex; 
    flex-direction: column-reverse;
    width: 45%;
}

.completedToDoItem {
    color: black;
    list-style: none;
    margin-left:-40px;
    padding: 15px;
    border: 2px solid black;
    margin-bottom: 20px;
    background-color: rgb(110, 255, 110);
    border-radius: 10px;
    
}

.js-input, .js-add-category {
    padding: 2px;
    border-radius: 4px;
    width: 300px;
}

.dueDate {
    font-family: sans-serif;
}

.completedToDoItem {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

#remove-button {
    display: inline-block;
}


.dragging {
    opacity: 1;
    background-color: #84ade7;
}
  
 

